<resources>
    <string name="app_name">Disfraces</string>

    <!-- Activity de Acceso -->
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>

    <!-- Activity de Nosotros -->
    <string name="descripcion">Esta es una tienda de disfraces para halloween abierta desde 1975. Te aseguramos que tenemos un disfraz que te quedará. </string>

    <!-- Activity de Compras -->
    <string name="informacion">Información registrada: </string>

    <!-- Activity de Productos -->
    <string name="titulo_productos">Lista de disfraces</string>
    <string name="instruccion_productos">Selecciona uno:</string>

    <!-- Activity de Pedido -->
    <string name="nombre">Nombre(s)</string>
    <string name="domicilio">Domicilio</string>
    <string name="producto">Disfraces</string>
    <string name="tallas">Talla</string>
    <string name="telefono">Teléfono de contacto</string>

    <!-- Botones -->
    <string name="ingresar">Ingresar</string>
    <string name="salir">Salir</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="regresar">Regresar</string>

    <!-- Opciones del menú -->
    <string name="pedido">Pedido</string>
    <string name="productos">Productos</string>
    <string name="compras">Mis Compras</string>
    <string name="nosotros">Nosotros</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <!-- Lista de productos -->
    <string-array name="lstProductos">
        <item>Vampiros</item>
        <item>Zombies</item>
        <item>Piratas</item>
        <item>Hombres Lobo</item>
        <item>Sirenas</item>
    </string-array>

    <!-- Lista de tallas -->
    <string-array name="lstTallas">
        <item>Chica</item>
        <item>Mediana</item>
        <item>Grande</item>
    </string-array>
</resources>